change controller settings

--- a/src/controller/CMakeLists.txt
+++ b/src/controller/CMakeLists.txt
@@ -2,14 +2,14 @@ cmake_minimum_required(VERSION 2.8.3)
 project(controller)
 
 find_package(catkin REQUIRED COMPONENTS
-  rc_car_msgs
+  rally_msgs
   joy
   roscpp
 )
 ################################################
 ## Declare ROS dynamic reconfigure parameters ##
 ################################################
-catkin_package(CATKIN_DEPENDS rc_car_msgs joy roscpp)
+catkin_package(CATKIN_DEPENDS rally_msgs joy roscpp)
 ###########
 ## Build ##
 ###########
