--- a/src/controller/package.xml
+++ b/src/controller/package.xml
@@ -7,11 +7,11 @@
   <license>MIT</license>
 
   <buildtool_depend>catkin</buildtool_depend>
-  <build_depend>rc_car_msgs</build_depend>
+  <build_depend>rally_msgs</build_depend>
   <build_depend>joy</build_depend>
   <build_depend>roscpp</build_depend>
   
-  <run_depend>rc_car_msgs</run_depend>
+  <run_depend>rally_msgs</run_depend>
   <run_depend>joy</run_depend>
   <run_depend>roscpp</run_depend>
 
