--- a/src/controller/package.xml
+++ b/src/controller/package.xml
@@ -3,7 +3,7 @@
   <name>controller</name>
   <version>0.0.0</version>
   <description>Activate autonomous/manual mode</description>
-  <maintainer email="tdat.nguyen93@gmail.com">Dat Nguyen</maintainer>
+  <maintainer email="duguyue100@gmail.com">Yuhuang Hu</maintainer>
   <license>MIT</license>
 
   <buildtool_depend>catkin</buildtool_depend>
