--- a/src/controller/cfg/paths.yaml
+++ b/src/controller/cfg/paths.yaml
@@ -1,2 +1,2 @@
 # PATHS ARE USED in each nodes, will be used via launch file under `rosparam load iyaml_file`
-model_path: "cnn_m_nv_py2_cw.json"
+model_path: "cnn_m_nv_py2_cw_v1.json"
