--- a/src/controller/cfg/paths.yaml
+++ b/src/controller/cfg/paths.yaml
@@ -1,2 +1,7 @@
 # PATHS ARE USED in each nodes, will be used via launch file under `rosparam load iyaml_file`
-model_path: "cnn_m_nv_py2_cw_le.json"
+model_path: "cnn_m_nv_py2_cw_le.json",
+frame_cut: [[40, 20], [0, 1]],
+img_shape: [240, 180],
+target_size: [64, 32],
+clip_value: 8,
+mode: 2
